--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,23 @@
 ---
 language: ruby
+
 rvm:
 - 2.3.1
 - 2.4.1
-before_install: gem install bundler -v 1.11.2
+
+before_install:
+  gem install bundler -v 1.11.2
+
+install:
+  - bundle
+  - gem install rubocop
+
+script:
+  - rake spec
+
+after_success:
+  - rubocop
+
 deploy:
   provider: rubygems
   api_key:
